log
Sun, Sep 21, 2025 10:37:45 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sun, Sep 21, 2025 10:38:31 PM: 
 treemap.c | 45 ++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 44 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 10/70
17e4fb2
Sun, Sep 21, 2025 10:40:29 PM: 
 treemap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:105:9: error: implicit declaration of function 'replaceNodeInParent' [-Werror=implicit-function-declaration]
         replaceNodeInParent(tree, node, child);
         ^~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
3d4cde9
